--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "botworks",
   "version": "1.0.0",
-  "description": "FIDIC chatbot on MBF",
+  "description": "Heroku MBF chatbot",
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/boswellp/MBF.git"
+    "url": "git+https://github.com/boswellp/BotFramework.git"
   },
   "author": "PGB",
   "dependencies": {
